2011-01-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.39.1 Released.

	* AST-2011-001: Stack buffer overflow in SIP channel driver

2011-01-12  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.39 Released.

2010-12-13  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.39-rc1 Released.

2010-12-09 22:00 +0000 [r297959]  Terry Wilson <twilson@digium.com>

	* channels/chan_sip.c: Ignore spurious REGISTER requests If a
	  REGISTER request with a Call-ID matching an existing transaction
	  is received it was possible that the REGISTER request would
	  overwrite the initreq of the private structure. This info is used
	  to generate messages for other responses in the transaction. This
	  patch ignores REGISTER requests that match non-REGISTER
	  transactions. (closes issue #18051) Reported by: eeman Tested by:
	  twilson Review: https://reviewboard.asterisk.org/r/1050/

2010-12-07 22:57 +0000 [r297823]  Jeff Peeler <jpeeler@digium.com>

	* main/channel.c: Revert code that changed SSRC for DTMF. Some
	  previous behavior was attempted to be restored, but mistakingly I
	  did not realize that the previous behavior was incorrect. This
	  fixes DTMF not being detected since DTMF shouldn't cause the SSRC
	  to change. (related to issue #17404) (closes issue #18189)
	  (closes issue #18352) Reported by: marcbou Tested by: cmbaker82

2010-12-07 22:35 +0000 [r297818]  Tilghman Lesher <tlesher@digium.com>

	* Makefile, utils/muted.c, contrib/init.d/org.asterisk.muted.plist
	  (added): Use non-deprecated APIs for CoreAudio Review:
	  https://reviewboard.asterisk.org/r/1040/

2010-12-07 15:23 +0000 [r297775]  Sean Bright <sean@malleable.com>

	* main/astobj2.c: Avoid a crash if we don't pass an argument to
	  'astobj2 test.'

2010-12-07 00:07 +0000 [r297689]  Tilghman Lesher <tlesher@digium.com>

	* apps/app_followme.c: Don't create a Local channel if the target
	  extension does not exist. (closes issue #18126) Reported by: